Available only with libxml2 parser.

=item * New directive: ExtractPath

Allows you to use a regular expression to extract out part of the path of each file
and index it with a meta name.
For example, this allows searches to be limited to parts of your file tree.

=item * New directive: FileMatch

FileMatch is similar to FileRules.  Where FileRules is used to exclude
files and directoires, FileMatch is used to I<include> files.

=item * New directive: PreSortedIndex

Controls which properties are pre-sorted while indexing.  All properties are sorted by default.

=item * New directive: ParserWarnLevel

Sets the level of warning printed when using libxml2.

=back

Changes to command line arguments.  See L<SWISH-RUN|SWISH-RUN> for documentation on these
switches.

=over 4

=item * New command line argument C<-H>

Controls the level (verbosity) of header information printed with search results.

=item * New command line argument C<-x>

Provides additional header output and allows for a I<format string> to describe what data to print.

=item * New command line argument C<-k>

Prints words stored in the swish index.

=item * New command line argument C<-N>

Provides a way to do incremental indexing by comparing last modification dates.
You pass C<-N> a path to a file and only files newer than the last modified date of that file will be indexed.

=item * Removed command line argument C<-D>

C<-D> no longer dumps the index file data.  Use C<-T> instead.

=item * New command line argument C<-T>

C<-T> is used for debugging indexing and searching.

=item * Enhanced command line argument C<-d>

Now C<-d> can accept some back-slashed characters to be used as output separators.

=item * Enhanced command line argument C<-P>

Now -P sets the phrase delimiter character in searches.

=item * New command line argument C<-L>

Swish 2.2 contains an B<experimental> feature to limit results by a range
of property values.  This behavior of this feature may change in the future.


=back
